<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learnvern"
        android:textSize="@dimen/textsize"
        android:textStyle="bold"
        android:textColor="@color/saffron"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/screenSubHeader"
        android:textSize="@dimen/commonMargin"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="@dimen/commonMargin" />


    <Button
        android:id="@+id/btnStartMessaging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startMessaging"
        android:textSize="@dimen/commonMargin"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:padding="10dp"
        android:backgroundTint="@color/saffron"
        android:layout_margin="@dimen/commonMargin"/>



</LinearLayout>